--- a/zoomable_icicle/index.html
+++ b/zoomable_icicle/index.html
@@ -8,25 +8,15 @@
     <script data-require="angular-touch@1.6.*" data-semver="1.6.2" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-touch.js"></script>
     <script data-require="ui-bootstrap@*" data-semver="2.5.0" src="https://cdn.rawgit.com/angular-ui/bootstrap/gh-pages/ui-bootstrap-tpls-2.5.0.js"></script>
     <script data-require="jquery@*" data-semver="3.2.1" src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="https://unpkg.com/@observablehq/notebook-inspector@1/dist/notebook-inspector-style.css">
-    <script src="./script.js"></script>
-    <style>
-      .observablehq {
-        display : none
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/@observablehq/notebook-inspector@1/dist/notebook-inspector-style.css">
+    <link rel="stylesheet" type="text/css" href = "./style.css">
   </head>
 
   <body>
- <script type="module">
-
-import {Inspector, Runtime} from "https://unpkg.com/@observablehq/notebook-runtime@1?module";
-import notebook from "./script.js";
-
-
-Runtime.load(notebook, Inspector.into(document.body));
-
-</script>
+    <script type="module">
+      import {Inspector, Runtime} from "https://unpkg.com/@observablehq/notebook-runtime@1?module";
+      import notebook from "./script.js";
+      Runtime.load(notebook, Inspector.into(document.body));
+    </script>
   </body>
-
 </html>
