--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -44,7 +44,7 @@
         });
         console.log("German!")
       }
-      if(window.parent.Cookies.get('DriftUseChinese)){
+      if(window.parent.Cookies.get('DriftUseChinese')){
         drift.config({
           locale: "zh"
         });
