--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -42,6 +42,7 @@
         drift.config({
           locale: "de-DE"
         });
+        drift.load('fyg65ic99kbf-dev');
         console.log("German!")
       }
       if(window.parent.Cookies.get('DriftUseChinese')){
