--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -53,8 +53,8 @@
         console.log("Chinese and alt widget!")
       }
       else {
-        drift.load('fyg65ic99kbf-dev');
-        console.log("Default widget!")
+        drift.load('hwb2hm5g8pf6-dev');
+        console.log("QA Org 1 widget!")
       }
 
       </script>
