--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -53,8 +53,8 @@
         console.log("Chinese and alt widget!")
       }
       else {
-        drift.load('hwb2hm5g8pf6-dev');
-        console.log("QA Org 1 widget!")
+        drift.load('r8xp4cw3k72v-dev');
+        console.log("QA v2 widget!")
       }
 
       </script>
