--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -61,7 +61,7 @@
       <!-- End of Async Drift Code -->
       <script>
         window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
-        drift('init', {'r8xp4cw3k72v-dev'}, { defer: true, eager: false  });
+        drift('init', 'r8xp4cw3k72v-dev', { defer: true, eager: false  });
       </script>
       <script defer src="https://widget.driftqa.com/conductor"></script>
   </head>
