--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
     <link rel="stylesheet" type="text/css" href="sequences.css"/>
-    <!-- Start of Async Drift Code -->
-    <script>
+   <!-- Start of Async Drift Code -->
+   <!--   <script>
       "use strict";
 
       !function() {
@@ -57,13 +57,14 @@
         console.log("QA v2 widget!")
       }
 
-      </script>
-      <!-- End of Async Drift Code -->
-<!--       <script>
+      </script> -->
+    <!-- End of Async Drift Code -->
+
+      <script>
         window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
         drift('init', 'r8xp4cw3k72v-dev', { defer: true, eager: false  });
       </script>
-      <script defer src="https://widget.driftqa.com/conductor"></script> -->
+      <script defer src="https://widget.driftqa.com/conductor"></script>
   </head>
   <body>
     <div id="main">
