--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
     <link rel="stylesheet" type="text/css" href="sequences.css"/>
    <!-- Start of Async Drift Code -->
-      <script>
+<!--       <script>
       "use strict";
 
       !function() {
@@ -57,7 +57,7 @@
         console.log("QA org 1 widget!")
       }
 
-      </script>
+      </script> -->
     <!-- End of Async Drift Code -->
 <!-- 
       <script>
@@ -65,12 +65,12 @@
         drift('init', 'r8xp4cw3k72v-dev', { defer: true, eager: false  });
       </script>
       <script defer src="https://widget.driftqa.com/conductor"></script> -->
-<!--      <script>
+     <script>
        console.log('loading hurwit test org - 317661')
         window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
         drift('init', '7rk2fmv23dny-dev', { defer: true, eager: false  });
       </script>
-      <script defer src="https://widget.driftqa.com/conductor"></script> -->
+      <script defer src="https://widget.driftqa.com/conductor"></script>
     
   </head>
   <body>
