--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -60,7 +60,7 @@
       </script> -->
     <!-- End of Async Drift Code -->
       <script>
-        if(window.parent.Cookies.get('widget1') {
+        if(window.parent.Cookies.get('UseFirstWidget') {
           console.log('loading widget 1')
           window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
           drift('init', 'r8xp4cw3k72v-dev', { defer: true, eager: false  });
