--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -61,14 +61,14 @@
     <!-- End of Async Drift Code -->
       <script>
         if (window.parent.Cookies.get('UseFirstWidget')) {
-          console.log('loading widget 1')
-          window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
-          drift('init', 'r8xp4cw3k72v-dev', { defer: true, eager: false  });
-        }
-        else {
           console.log('loading hurwit test org - 317661')
           window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
           drift('init', '7rk2fmv23dny-dev', { defer: true, eager: false  });
+        }
+        else {
+          window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
+          drift('init', 'mvktsimmdin7-dev', { defer: true, eager: false  });
+          
         }
       </script>
       <script defer src="https://widget.driftqa.com/conductor"></script>
