--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -67,7 +67,7 @@
         }
         else {
           window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
-          drift('init', 'mvktsimmdin7-dev', { defer: true, eager: false  });
+          drift('init', '2igfi2euhm8g-dev', { defer: true, eager: false  });
           
         }
       </script>
