--- a/multi_lang_widget_demo/germany/index.html
+++ b/multi_lang_widget_demo/germany/index.html
@@ -3,7 +3,7 @@
     <!-- Start of Async Drift Code - German -->
     <script>
         window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
-        drift('init', {'aick84t7ix6g-dev'}, { defer: true, eager: false  });
+        drift('init', 'aick84t7ix6g-dev', { defer: true, eager: false  });
       </script>
       <script defer src="https://widget.driftqa.com/conductor"></script>
     <!-- End of Async Drift Code -->
