--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -62,8 +62,10 @@
       <script>
 //         if (window.parent.Cookies.get('UseFirstWidget')) {
           console.log('loading hurwit test org - 317661')
+          drift.config({locale: "de"});
           window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
           drift('init', '7rk2fmv23dny-dev', { defer: true, eager: false  });
+          
 //         }
 //         else {
 //           window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
