--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -61,15 +61,15 @@
     <!-- End of Async Drift Code -->
       <script>
 //         if (window.parent.Cookies.get('UseFirstWidget')) {
-          console.log('loading hurwit test org - 317661')
-          window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
-          drift.config({locale: "de"});
-          drift('init', '7rk2fmv23dny-dev', { defer: true, eager: false  });
+//           console.log('loading hurwit test org - 317661')
+//           window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
+//           drift('init', '7rk2fmv23dny-dev', { defer: true, eager: false  });
           
 //         }
 //         else {
-//           window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
-//           drift('init', '2igfi2euhm8g-dev', { defer: true, eager: false  });
+          window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
+          drift.config({locale: "de"});
+          drift('init', '2igfi2euhm8g-dev', { defer: true, eager: false  });
           
 //         }
       </script>
