--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -52,10 +52,10 @@
         drift.load('mvktsimmdin7-dev');
         console.log("Chinese and alt widget!")
       }
-      else if(window.parent.Cookies.get('DriftUseDefault')) {
-        drift.load('hwb2hm5g8pf6-dev');
-        console.log("QA org 1 widget!")
-      }
+//       else if(window.parent.Cookies.get('DriftUseDefault')) {
+//         drift.load('hwb2hm5g8pf6-dev');
+//         console.log("QA org 1 widget!")
+//       }
       else {
         drift.config({
           locale: "de-DE"
