--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -60,7 +60,7 @@
         drift.config({
           locale: "de-DE"
         });
-        drift.load('fyg65ic99kbf-dev');
+        drift.load('mvktsimmdin7-dev');
         console.log("German!")
       }
 
