--- a/eapTesting/german/index.html
+++ b/eapTesting/german/index.html
@@ -2,32 +2,11 @@
   <head>
   <!-- Start of Async Drift Code - German -->
   <!-- Loading QA test org 438707 -->
-  <script>
-    "use strict";
-    
-    !function() {
-      var t = window.driftt = window.drift = window.driftt || [];
-      if (!t.init) {
-        if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-        t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-        t.factory = function(e) {
-          return function() {
-            var n = Array.prototype.slice.call(arguments);
-            return n.unshift(e), t.push(n), t;
-          };
-        }, t.methods.forEach(function(e) {
-          t[e] = t.factory(e);
-        }), t.load = function(t) {
-          var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-          o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftqa.com/include/" + n + "/" + t + ".js";
-          var i = document.getElementsByTagName("script")[0];
-          i.parentNode.insertBefore(o, i);
-        };
-      }
-    }();
-    drift.SNIPPET_VERSION = '0.3.1';
-    drift.load('45w5ugte3y4n-dev');
+    <script>
+      window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
+      drift('init', '45w5ugte3y4n-dev', { defer: true, eager: false  });
     </script>
+    <script defer src="https://js.driftqa.com/conductor"></script>
   <!-- End of Async Drift Code -->
   </head>
   <body>
