--- a/radial_sunburst/index.html
+++ b/radial_sunburst/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
     <link rel="stylesheet" type="text/css" href="sequences.css"/>
    <!-- Start of Async Drift Code -->
-     <script>
+<!--      <script>
       "use strict";
 
       !function() {
@@ -79,6 +79,8 @@
 //           drift('init', '2igfi2euhm8g-dev', { defer: true, eager: false  });
           
 //         }
+        window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
+        drift('init', 'wf28v5mp8r37-dev', { defer: true, eager: false  });
       </script>
       <script defer src="https://widget.driftqa.com/conductor"></script>
     
