--- a/multi_lang_widget_demo/france/index.html
+++ b/multi_lang_widget_demo/france/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   <!-- Start of Async Drift Code - French -->
-<!--   <script>
+  <script>
   "use strict";
 
   !function() {
@@ -26,14 +26,14 @@
   }();
   drift.SNIPPET_VERSION = '0.3.1';
   drift.load('c663k7uy7v3v-dev');
-  </script> -->
+  </script>
   <!-- End of Async Drift Code -->
   <!-- French QA Widget v2 script-->
-     <script>
+<!--      <script>
       window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
       drift('init', 'c663k7uy7v3v-dev', { defer: true, eager: false  });
     </script>
-    <script defer src="https://widget.driftqa.com/conductor"></script>
+    <script defer src="https://widget.driftqa.com/conductor"></script> -->
   <!--End of qa v2 script-->
   </head>
   <body>
