--- a/eapTesting/german/index.html
+++ b/eapTesting/german/index.html
@@ -2,16 +2,9 @@
   <head>
   <!-- Start of Async Drift Code - German -->
   <!-- Loading QA test org 438707 -->
-    <!-- <script>
-      window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
-      drift('init', '45w5ugte3y4n-dev', { defer: true, eager: false  });
-    </script>
-    <script defer src="https://js.driftqa.com/conductor"></script> -->
-  <!-- End of Async Drift Code -->
-  <!-- Start of Async Drift Code - German -->
-<script>
+  <script>
   "use strict";
-  
+
   !function() {
     var t = window.driftt = window.drift = window.driftt || [];
     if (!t.init) {
@@ -26,14 +19,14 @@
         t[e] = t.factory(e);
       }), t.load = function(t) {
         var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftqa.com/include/" + n + "/" + t + ".js";
         var i = document.getElementsByTagName("script")[0];
         i.parentNode.insertBefore(o, i);
       };
     }
   }();
   drift.SNIPPET_VERSION = '0.3.1';
-  drift.load('aaxi2626ecxr');
+  drift.load('45w5ugte3y4n-dev');
   </script>
   <!-- End of Async Drift Code -->
   </head>
