revert to using multi lang demo org

--- a/multi_lang_widget_demo/germany/index.html
+++ b/multi_lang_widget_demo/germany/index.html
@@ -25,7 +25,7 @@
       }
     }();
     drift.SNIPPET_VERSION = '0.3.1';
-    drift.load('45w5ugte3y4n-dev');
+    drift.load('aick84t7ix6g-dev');
     </script>
     <!-- End of Async Drift Code -->
   </head>
