--- a/eapTesting/french/index.html
+++ b/eapTesting/french/index.html
@@ -1,16 +1,10 @@
 <html>
   <!-- Start of Async Drift Code - French -->
   <!-- Loading QA test org 438707 -->
-    <!-- <script>
-      window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
-      drift('init', '5rk2xmfim2am-dev', { defer: true, eager: false  });
-    </script>
-    <script defer src="https://js.driftqa.com/conductor"></script> -->
-    <!-- End of Async Drift Code -->
     <!-- Start of Async Drift Code - French -->
-    <script>
+      <script>
       "use strict";
-      
+
       !function() {
         var t = window.driftt = window.drift = window.driftt || [];
         if (!t.init) {
@@ -32,9 +26,10 @@
         }
       }();
       drift.SNIPPET_VERSION = '0.3.1';
-      drift.load('wky6s56ehhsm');
+      drift.load('5rk2xmfim2am-dev');
       </script>
       <!-- End of Async Drift Code -->
+  <!-- End of Async Drift Code -->
   </head>
   <body>
     <h1>Sample Adobe french site</h1>
