--- a/multi_lang_widget_demo/france/index.html
+++ b/multi_lang_widget_demo/france/index.html
@@ -1,40 +1,33 @@
 <html>
   <head>
   <!-- Start of Async Drift Code - French -->
-  <script>
-  "use strict";
+<script>
+"use strict";
 
-  !function() {
-    var t = window.driftt = window.drift = window.driftt || [];
-    if (!t.init) {
-      if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-      t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-      t.factory = function(e) {
-        return function() {
-          var n = Array.prototype.slice.call(arguments);
-          return n.unshift(e), t.push(n), t;
-        };
-      }, t.methods.forEach(function(e) {
-        t[e] = t.factory(e);
-      }), t.load = function(t) {
-        var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.drifqa.com/include/" + n + "/" + t + ".js";
-        var i = document.getElementsByTagName("script")[0];
-        i.parentNode.insertBefore(o, i);
+!function() {
+  var t = window.driftt = window.drift = window.driftt || [];
+  if (!t.init) {
+    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+    t.factory = function(e) {
+      return function() {
+        var n = Array.prototype.slice.call(arguments);
+        return n.unshift(e), t.push(n), t;
       };
-    }
-  }();
-  drift.SNIPPET_VERSION = '0.3.1';
-  drift.load('c663k7uy7v3v-dev');
-  </script>
-  <!-- End of Async Drift Code -->
-  <!-- French QA Widget v2 script-->
-<!--      <script>
-      window.drift=window.drift||function(){(drift.q=drift.q||[]).push(arguments)};
-      drift('init', 'c663k7uy7v3v-dev', { defer: true, eager: false  });
-    </script>
-    <script defer src="https://widget.driftqa.com/conductor"></script> -->
-  <!--End of qa v2 script-->
+    }, t.methods.forEach(function(e) {
+      t[e] = t.factory(e);
+    }), t.load = function(t) {
+      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+      var i = document.getElementsByTagName("script")[0];
+      i.parentNode.insertBefore(o, i);
+    };
+  }
+}();
+drift.SNIPPET_VERSION = '0.3.1';
+drift.load('zkma23hgbr3a');
+</script>
+<!-- End of Async Drift Code -->
   </head>
   <body>
     <h1>This is my french site</h1>
